# SoftwareTutorials

./: .gitignore  CMakeLists.txt  README.md
DD4hepTutorials/: CMakeLists.txt  README.md
DD4hepTutorials/scripts/: plot_cell_energy_sum.py
DD4hepTutorials/sdaction/: CMakeLists.txt
DD4hepTutorials/sdaction/src/: simplecaloSDAction.cpp
DD4hepTutorials/simplecalo1/: sc1SteeringFile.py
DD4hepTutorials/simplecalo1/compact/: simplecalo1.xml
DD4hepTutorials/simplecalo1/include/: sc1_solution1.h  sc1_solution2.h
DD4hepTutorials/simplecalo1/src/: simplecalo1.cpp
DD4hepTutorials/simplecalo2/: sc2SteeringFile.py
DD4hepTutorials/simplecalo2/compact/: elements.xml  simplecalo2.xml
DD4hepTutorials/simplecalo2/include/: sc2_solution1.h
DD4hepTutorials/simplecalo2/src/: simplecalo2.cpp
GaudiTutorial/: CMakeLists.txt  README.md
GaudiTutorial/EventStats/: CMakeLists.txt
GaudiTutorial/EventStats/options/: runEventStats.py  runEventStatsMultithreading.py  runEventStatsSolution.py
GaudiTutorial/EventStats/src/components/: EventStats.cpp
GaudiTutorial/MoliereRadiusFunctional/: CMakeLists.txt
GaudiTutorial/MoliereRadiusFunctional/options/: runMoliereRadius.py  runMoliereRadiusSolution.py
GaudiTutorial/MoliereRadiusFunctional/src/components/: MoliereRadius.cpp  MoliereRadiusSolution.cpp
GaudiTutorial/RandomNoiseDigitizer/: CMakeLists.txt
GaudiTutorial/RandomNoiseDigitizer/options/: runRandomNoiseDigitizer.py  runRandomNoiseDigitizerSolution.py
GaudiTutorial/RandomNoiseDigitizer/src/components/: RandomNoiseDigitizer.cpp  RandomNoiseDigitizerSolution.cpp
test/: CMakeLists.txt
